# AdvancedDeepLearning-UniTS

./: .gitignore  README.md  environment.yml  environment_cluster.yml  update_env.bash
challenges/01/: AdvML_Challenge_2023_1.ipynb  Report_Summary.md  cluster_results.pkl
challenges/01/models/: model_FCN_real_labels.pt  model_FCN_tsne_3D_KMeans.pt
challenges/01/results/: clustering_results.csv  clustering_results.pkl  dim_reduction_datasets.pkl  manual_labelling.pkl  manual_labelling_tsne.pkl
challenges/02/: Report_Summary.md  clear_results.sh  teacher_student.md
challenges/02/code/: config_partA.yml  config_partB.yml  hierarchical_function_learning.py  partA_src.py  partB_src.py  results_analysis.ipynb  teacher_student.py  utils.py
challenges/02/models/: student_equalparam_1000_0.1.pt  student_equalparam_iter1000_lr0.1.pt  student_overparam_1000_0.1.pt  student_overparam_iter1000_lr0.1.pt  student_underparam_1000_0.1.pt  student_underparam_iter1000_lr0.1.pt  teacher_model.pt
challenges/02/results/: errors_iter1000_lr0.1.csv  global_stats_iter1000_lr0.1.pkl  layerwise_stats_iter1000_lr0.1.pkl  params_iter1000_lr0.1.pkl  student_results_1000_0.1.pkl  student_results_iter1000_lr0.1.pkl
challenges/02/scripts/: load_receive_cluster.sh  run_teacher_student.sh  teacher_student_parallel.py  teacher_student_serial.py
challenges/02/src/: utils.py
final_project/: .env  .gitignore  README.md  pyproject.toml  requirements.txt
final_project/configs/: cnn.yaml  gcnn.yaml  mlp.yaml  mlp_coherence.yaml
final_project/scripts/: analyze_mlp_weights_distribution.py  example_grid_shift.py  lightning_training.py  minimal_coherence_optimization_example.py  mlp_training.py  transformed_grids.py  visualize_group_kernel_weights.py  visualize_kernel_weights.py  visualize_transformed_grids.py  visualize_transformed_group_elements.py
final_project/shell/: launch_job.sh  setup_environment.sh  train.sh
final_project/slides/: bibliography.bib  frame_theory_concepts.tex  packages_beamer.sty  presentation.aux  presentation.bbl  presentation.bcf  presentation.blg  presentation.fdb_latexmk  presentation.fls  presentation.nav  presentation.run.xml  presentation.snm  presentation.tex  presentation.toc
final_project/src/: cnn.py  datamodule.py  gcnn.py  gcnn_model.py  lightning_model.py  low_coherence_mlp.py  minimal_coherence_optimization.py  mlp.py
final_project/tests/: tests_gcnn.py
final_project/utils/: __init__.py  utils.py
project/: README.md
