# Group Convolutional Neural Networks Project Environment
# ====================================================
# Python 3.10 ONLY - see requirements.txt
# This file is used purely for creating a Python environment with dependencies

[project]
name = "gcnn-project"
version = "0.1.0"
description = "Group Convolutional Neural Networks Project Environment"
requires-python = "==3.10"

dependencies = [
    # Core ML/DL Stack
    "torch==2.2.1",
    "torchaudio==2.2.1",
    "torchvision==0.17.1",
    "lightning==2.3.0",
    "datasets==3.4.1",
    "safetensors==0.5.3",
    "torchsummary",
    "tensorboard",

    # Training & Fine-tuning
    "trl==0.16.1",
    "evaluate==0.4.3",
    "torchinfo==1.8.0",
    # JAX Ecosystem (removed)
    "opt_einsum==3.4.0",

    # Scientific Computing & Data
    "numpy==1.26.3",
    "scipy==1.11.4",
    "pandas==2.1.4",
    "scikit-learn==1.6.1",
    "matplotlib==3.8.2",
    "seaborn==0.13.1",
    "pyarrow==19.0.1",
    "joblib==1.3.2",
    "threadpoolctl==3.2.0",
    "munkres==1.1.4",

    # Development & Jupyter
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
    "ipython==8.30.0",
    "ipykernel==6.29.5",
    "ipywidgets==8.1.5",
    "jupyterlab_widgets==3.0.13",
    "debugpy==1.8.11",
    "asttokens==3.0.0",
    "executing==0.8.3",
    "stack-data==0.2.0",
    "pure-eval==0.2.2",
    "decorator==5.1.1",
    "jedi==0.19.2",
    "matplotlib-inline==0.1.6",
    "parso==0.8.4",
    "pexpect==4.8.0",
    "ptyprocess==0.7.0",
    "traitlets==5.14.3",
    "comm==0.2.1",
    "nest-asyncio==1.6.0",
    "pyzmq==26.2.0",
    "tornado==6.4.2",
    "widgetsnbextension==4.0.13",

    # Web APIs & Services
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "gradio==4.44.0",
    "gradio_client==1.3.0",
    "starlette==0.46.1",
    "websockets==12.0",

    # HTTP & Networking
    "aiohttp==3.11.14",
    "aiosignal==1.3.2",
    "aiohappyeyeballs==2.6.1",
    "httpx==0.28.1",
    "httpcore==1.0.7",
    "requests==2.32.3",
    "anyio==4.9.0",
    "sniffio==1.3.1",
    "h11==0.14.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "hyperframe==6.1.0",
    "async-timeout==5.0.1",
    "multidict==6.2.0",
    "yarl==1.18.3",
    "frozenlist==1.5.0",
    "propcache==0.3.1",

    # Data Processing & Storage
    "dill==0.3.8",
    "fsspec==2024.12.0",
    "aiofiles==23.2.1",
    "tensorstore==0.1.74",
    "xxhash==3.5.0",
    "zstandard==0.23.0",
    "msgpack==1.1.0",
    "orjson==3.10.16",
    "protobuf==6.30.2",

    # Audio & Media Processing
    "pydub==0.25.1",
    "ffmpy==0.5.0",

    # UI & Graphics
    "PySide6==6.8.2",
    "shiboken6==6.8.2",
    "pillow==10.2.0",
    "contourpy==1.2.0",
    "cycler==0.12.1",
    "fonttools==4.47.2",
    "kiwisolver==1.4.5",
    "pyparsing==3.1.1",
    
    # Configuration & CLI
    "PyYAML==6.0.2",
    "typer==0.15.2",
    "click==8.1.8",
    "rich==13.9.4",
    "tomlkit==0.12.0",
    "absl-py==2.2.2",
    "shellingham==1.5.4",
    
    # System & Performance
    "psutil==7.0.0",
    "ninja==1.11.1.4",
    "toolz==1.0.0",
    
    # Utilities & Helpers
    "tqdm==4.67.1",
    "einops==0.8.1",
    "humanize==4.12.3",
    
    # Core Python Infrastructure
    "setuptools==75.8.2",
    "wheel==0.45.1",
    "pip==25.0.1",
    "packaging==24.2",
    "filelock==3.18.0",
    "platformdirs==3.10.0",
    "typing_extensions==4.12.2",
    "importlib_resources==6.5.2",
    "zipp==3.21.0",
    
    # Network & Security
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "urllib3==2.3.0",
    "idna==3.10",
    "PySocks==1.7.1",
    "cffi==1.17.1",
    "pycparser==2.22",
    
    # Validation & Serialization
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "attrs==25.3.0",
    "annotated-types==0.7.0",
    
    # Date & Time
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "tzdata==2023.4",
    
    # Development Tools
    "ruff==0.11.2",
    "exceptiongroup==1.2.0",
    
    # Terminal & Display
    "colorama==0.4.6",
    "prompt-toolkit==3.0.43",
    "wcwidth==0.2.13",
    "Pygments==2.15.1",
    
    # Compression & Encoding
    "Brotli==1.1.0",
    "six==1.17.0",
    
    # Web & Markup Processing
    "Jinja2==3.1.6",
    "MarkupSafe==2.1.5",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "python-multipart==0.0.20",
]
